tests/snapshots/presenter__presenter_passive_range_flash.snap
---
source: tests/presenter.rs
expression: out
---
"┌r─────────────────────────────────────┐┌main.rs───────────────────────────────────────────────────┐"
"│  ▾ src                               ││line one                                                  │"
"│M     main.rs                         ││line two                                                  │"
"│    ▾ inner                           ││line three                                                │"
"│A       added.rs                      ││line four                                                 │"
"│    README.md                         ││line five                                                 │"
"│D   gone.txt                          ││line six                                                  │"
"│?   scratch.log                       ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"│                                      ││                                                          │"
"└──────────────────────────────────────┘└────↑↓ navigate · Enter open · v view · Esc close · ? help┘"
