tests/snapshots/presenter__remote_notice_combined.snap
---
source: tests/presenter.rs
expression: out
---
"┌main.rs───────────────────────────────────────────────────┐"
"│Showing first 5000 lines (truncated)                      │"
"│delta not found — showing plain diff                      │"
"│fn main() {                                               │"
"│    println!("hello");                                    │"
"│}                                                         │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└────↑↓ navigate · Enter open · v view · Esc close · ? help┘"
"Update v1.1.0 available · Spotlight: Project Meteor · ? deta"
